--- a/.github/workflows/main.semantic.release.yml
+++ b/.github/workflows/main.semantic.release.yml
@@ -5,7 +5,7 @@ on:
             - master
 jobs:
     semantic-release:
-        runs-on: linux
+        runs-on: ubuntu-latest
         steps:
             - name: Checkout
               uses: actions/checkout@v4
