--- a/.releaserc
+++ b/.releaserc
@@ -1,5 +1,12 @@
 {
   "release": {
-    "branches": ["master"]
-  }
+    "branches": [
+      "master"
+    ]
+  },
+  "plugins": [
+    "@semantic-release/commit-analyzer",
+    "@semantic-release/release-notes-generator",
+    "@semantic-release/github"
+  ]
 }
