--- a/.github/workflows/main.semantic.release.yml
+++ b/.github/workflows/main.semantic.release.yml
@@ -5,11 +5,13 @@ on:
             - master
 jobs:
     semantic-release:
-        runs-on: ubuntu-latest
+        runs-on: linux
         steps:
             - name: Checkout
               uses: actions/checkout@v4
             - name: Semantic Release
               uses: cycjimmy/semantic-release-action@v4
+              with:
+                branches: master
               env:
                 GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
