--- a/.github/workflows/main.semantic.release.yml
+++ b/.github/workflows/main.semantic.release.yml
@@ -1,17 +1,17 @@
-name: semantic-release
-on:
-    push:
-        branches: 
-            - master
-jobs:
-    semantic-release:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v4
-            - name: Semantic Release
-              uses: cycjimmy/semantic-release-action@v4
-              with:
-                branches: master
-              env:
-                GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+# name: semantic-release
+# on:
+#     push:
+#         branches: 
+#             - master
+# jobs:
+#     semantic-release:
+#         runs-on: ubuntu-latest
+#         steps:
+#             - name: Checkout
+#               uses: actions/checkout@v4
+#             - name: Semantic Release
+#               uses: cycjimmy/semantic-release-action@v4
+#               with:
+#                 branches: master
+#               env:
+#                 GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
