--- a/.github/workflows/manual.release.yml
+++ b/.github/workflows/manual.release.yml
@@ -1,32 +1,32 @@
-name: manual-release
-on:
-  workflow_dispatch:
-    inputs:
-      tag:
-        description: Git Tag to use for the release
-        required: true
+# name: manual-release
+# on:
+#   workflow_dispatch:
+#     inputs:
+#       tag:
+#         description: Git Tag to use for the release
+#         required: true
 
 
-jobs:
-  goreleaser:
-    runs-on: ubuntu-latest
-    steps:
-      -
-        name: Checkout
-        uses: actions/checkout@v2
-      -
-        name: Unshallow
-        run: git fetch --prune --unshallow
-      -
-        name: Set up Go
-        uses: actions/setup-go@v2
-        with:
-          go-version: 1.23.0
-      -
-        name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@v2
-        with:
-          version: latest
-          args: release --rm-dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+# jobs:
+#   goreleaser:
+#     runs-on: ubuntu-latest
+#     steps:
+#       -
+#         name: Checkout
+#         uses: actions/checkout@v2
+#       -
+#         name: Unshallow
+#         run: git fetch --prune --unshallow
+#       -
+#         name: Set up Go
+#         uses: actions/setup-go@v2
+#         with:
+#           go-version: 1.23.0
+#       -
+#         name: Run GoReleaser
+#         uses: goreleaser/goreleaser-action@v2
+#         with:
+#           version: latest
+#           args: release --rm-dist
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
