chore: working on build actions

--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -1,19 +1,19 @@
-name: release
+name: branch-build
 on:
     push:
         branches: 
             - '*'
             - '!master'
 jobs:
-    releases-matrix:
-      name: Release Go Binary
+    build-workflow:
+      name: build
       runs-on: ubuntu-latest
       steps:
         - uses: actions/checkout@v4
         - name: Setup Go
-          uses: actions/setup-go@v2
+          uses: actions/setup-go@v5
           with:
-            go-version: ‘1.23.0’    
+            go-version: '>=1.23.0'
         - name: Install dependencies
           run: |
               go version
