chore: working on build actions

--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -42,7 +42,10 @@ jobs:
               env:
                 GOOS: ${{ matrix.goos }}
                 GOARCH: ${{ matrix.goarch }}
+                CGO_ENABLED: 0
               run: |
+                pwd
+                ls -ltr
                 go build -ldflags="${{ matrix.ldflags }}" -mod vendor -trimpath  . 
 
     
