chore: working on build actions

--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -37,6 +37,7 @@ jobs:
                 ldflags:
                     - -s -w -X main.version={{.Version}} -X main.commit={{.Commit}} -X main.date={{ .CommitDate }} -X main.builtBy=goreleaser -X main.treeState={{ .IsGitDirty }}                  
         steps:
+            - uses: actions/checkout@v4
             - uses: actions/setup-go@v5
             - name: build
               env:
