--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -56,7 +56,7 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: release
-              if: ${{ github.ref_name != 'master' }}
+              if: ${{ github.ref_name == 'master' }}
               run: |
                 echo release
     
