--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -1,4 +1,4 @@
-name: branch-build
+name: build
 on:
     push:
         branches: 
@@ -54,9 +54,9 @@ jobs:
         name: release
         needs: build-workflow
         runs-on: ubuntu-latest
+        if: ${{ github.ref_name == 'master' }}
         steps:
             - name: release
-              if: ${{ github.ref_name == 'master' }}
               run: |
                 echo release
     
