--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -4,6 +4,7 @@ version: 2
 before:
   hooks:
     # this is just an example and not a requirement for provider building/publishing
+    - go mod download
     - go mod tidy
 builds:
 - env:
