--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -3,9 +3,8 @@
 version: 2
 before:
   hooks:
-    # this is just an example and not a requirement for provider building/publishing
+    # this is just an example and not a requirement for provider building/publishing - go mod tidy
     - go mod download
-    - go mod tidy
 builds:
 - env:
     # goreleaser does not work with CGO, it could also complicate
